css/utilities.css
.container {
    max-width: 1100px;
    margin: 0 auto;
    /* overflow: auto; */
    padding: 0 40px;
}

.card {
    background-color: var(--primary-text);
    color: #071330;
    border-radius: 10px;
    box-shadow: 0 3px 10px rgba(0,0,0,0.2);
    padding: 20px;
    /* margin: 10px ; */
}

.card-3 {
    height: 50%;
}

.card-4 {
    height: 100%;
    min-height: 400px;
    padding: 0;
    overflow: hidden;
    display: flex;
    flex-direction: column;
}

.btn {
    display: inline-block;
    padding: 10px 30px;
    cursor: pointer;
    background-color: var(--primary-color);
    color: var(--primary-text);
    border: none;
    border-radius: 5px;
}

.btn-outline {
    background-color: transparent;
    border: 1px solid var(--primary-text);
}

.btn:hover {
    transform: scale(0.98);
}

.text-center {
    text-align: center;
}

.flex {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.flex-2 {
    display:flex;
    justify-content: space-evenly;
    height: 100%;
    align-items: flex-end;
    padding-bottom: 10px;
}

.flex-3 {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.flex-4 {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 10px 20px;
}

.grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.grid-3 {
    grid-template-columns: repeat(3, 1fr);
    height: 50%;
    gap: 50px;
}

.grid-4{
    height: 100%;
    width: 100%;
    gap: 40px;
}

/* Margin */
.my-1 {
    margin: 1rem 0;
}
.my-2 {
    margin: 1.5rem 0;
}
.my-3 {
    margin: 2rem 0;
}
.my-4 {
    margin: 3rem 0;
}
.my-5 {
    margin: 4rem 0;
}

.m-1 {
    margin: 1rem;
}
.m-2 {
    margin: 1.5rem;
}
.m-3 {
    margin: 2rem;
}
.m-3 {
    margin: 3rem;
}
.m-5 {
    margin: 4rem;
}

/* padding */
.py-1 {
    padding: 1rem 0;
}
.py-2 {
    padding: 1.5rem 0;
}
.py-3 {
    padding: 2rem 0;
}
.py-3 {
    padding: 3rem 0;
}
.py-5 {
    padding: 4rem 0;
}

.p-1 {
    padding: 1rem;
}
.p-2 {
    padding: 1.5rem;
}
.p-3 {
    padding: 2rem;
}
.p-3 {
    padding: 3rem;
}
.p-5 {
    padding: 4rem;
}

